<resources>
    <string name="app_name">WhereToNext</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="close_text">Close</string>
    <string name="email_prompt">Enter Email Address…</string>
    <string name="welcome_back_text">Welcome Back</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password…</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="create_an_account_text">Create An Account!</string>
    <string name="your_name_text">Your Name…</string>
    <string name="confirm_password_text">Confirm Password…</string>
    <string name="already_have_an_account_text">Already Have An Account?</string>
    <string name="register_text">Register</string>
    <string name="logout_text">Logout</string>
    <string name="rides_text">Rides</string>
    <string name="notifications_text">Notifications</string>
    <string name="reviews_text">Reviews</string>
    <string name="travel_history_text">Travel History</string>
    <string name="my_profile_text">My Profile</string>
    <string name="car_profile_text">Car Profile</string>
    <string name="rider_name_text">Rider Name…</string>
    <string name="rider_email_text">Rider Email Address…</string>
    <string name="account_circle_text">Account Circle</string>
    <string name="profiles_text">Profiles</string>
    <string name="directions_car_text">Directions Car</string>
    <string name="rate_review_text">Rate Review</string>
    <string name="account_box_text">Account Box</string>
    <string name="phone_number_hint">Phone Number…</string>
    <string name="your_location_hint">Your Location…</string>
    <string name="update_profile_btn_text">Update Profile</string>
    <string name="update_car_profile_btn_text">Update Car Profile</string>
    <string name="edit_profile_btn_text">Edit Profile</string>
    <string name="edit_car_profile_btn_text">Edit Car Profile</string>
    <string name="bio_hint">Something About You…</string>
    <string name="sample_ride_id">Ride ID: 8361</string>
    <string name="sample_ride_posted_at">14:59 05–12–2020</string>
    <string name="sample_start_location">Pickup Location</string>
    <string name="sample_destination">Destination</string>
    <string name="pickup_location_hint">Pickup Location…</string>
    <string name="drop_off_location_hint">Drop Off Location…</string>
    <string name="submit_btn_text">Submit</string>
    <string name="add_ride_text">Add Ride</string>
    <string name="search_location_text">Search Location…</string>
    <string name="filter_list_text">Filter List</string>
    <string name="select_an_image_text">Select An Image</string>
    <string name="take_a_picture_text">Take A Picture</string>
    <string name="select_ride_type_text">Select Ride Type</string>
    <string name="cancel_text">Cancel</string>
    <string name="number_of_passengers_hint">Number Of Passengers…</string>
    <string name="search_ride_text">Search Ride</string>
    <string name="create_alert_text">Create Alert</string>
    <string name="find_ride_text">Find Ride</string>
    <string name="next_text">Next</string>
    <string name="travel_date_quiz">When are you going?</string>
    <string name="ride_location_quiz">Ride pick up and drop off locations?</string>
    <string name="ride_passengers_quiz">How many passengers can you take?</string>
    <string name="publish_ride_text">Publish your ride.</string>
    <string name="publish_text">Publish</string>
    <string name="offer_ride_text">Offer Ride</string>
    <string name="ride_passengers_text">Ride Passengers</string>
    <string name="public_ride_text">Publish Ride</string>
    <string name="date_and_tile_hint">Date And Tile</string>
    <string name="title_activity_maps">Map</string>
    <string name="car_image_text">Car Image</string>
    <string name="mode_hint">Car Model…</string>
    <string name="plate_number_hint">Car Plate  Number…</string>
    <string name="update_car_profile_text">Update Car Profile</string>
    <string name="ride_time_hint">Ride Time…</string>
    <string name="ride_date_hint">Ride Date…</string>
    <string name="ride_details_text">Ride Details</string>
    <string name="book_ride_text">Book Ride</string>
    <string name="start_ride_text">Start Ride</string>
    <string name="pay_text">Pay</string>
    <string name="how_much_hint">How Much…</string>
    <string name="pay_header_text">Pay for the ride and complete Booking</string>
    <string name="comment_hint">Comment…</string>
    <string name="review_ride_text">Review Ride</string>
    <string name="write_review_text">Write Review</string>
    <string name="transact_text">Transact</string>
    <string name="five_dollars_numeric">5.00</string>
    <string name="open_text">Open</string>
    <string name="ride_cost_quiz">Cost per single person for the ride</string>
    <string name="ride_cost_text">Ride Cost</string>
    <string name="payment_mode_text">Payment Mode</string>
    <string name="pay_pal_text">PayPal</string>
    <string name="cash_text">Cash</string>
    <string name="notification_title_hint">Notification Title</string>
    <string name="notification_body_hint">This is a sample notification body just for display and design purposes</string>
    <string name="ride_location_text">Ride Location</string>
    <string name="select_location_text">Select Location</string>
    <string name="drop_off_location_text">Drop Off Location</string>
    <string name="pickup_location_text">Pickup Location</string>
    <string name="ride_date_text">Ride Date</string>
    <string name="application_icon_text">Application Icon</string>
    <string name="request_permission_text">Request Permission</string>
    <string name="request_permission_prompt">Where To Next Needs Location Access to be able to provide the promised services effectively, please grant the access</string>
    <string name="grant_access_text">Grant Access</string>
    <string name="bookings_text">Bookings</string>
    <string name="paid_text">Paid</string>
    <string name="book_ride_details_advice_text">Please Fill in the correct booking details, and pay for the ride if possible</string>
    <string name="pay_later_text">Pay Later</string>
    <string name="submit_booking_text">Submit Booking</string>
    <string name="pay_and_complete_text">Pay and Complete</string>
</resources>
