<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/payment_mode_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <Button
        android:id="@+id/pay_pal_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/accent_btn_bg"
        android:text="@string/pay_pal_text"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/cash_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/accent_btn_bg"
        android:text="@string/cash_text"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/cancel_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textStyle="bold" />


</LinearLayout>