<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".RequestPermissionsActivity">

    <ImageView
        android:id="@+id/app_icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/application_icon_text"
        android:src="@mipmap/ic_launcher_round" />


    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/request_permission_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/prompt_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/request_permission_prompt"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="18sp" />

    <Button
        android:id="@+id/grant_permission_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/grant_access_text" />

</RelativeLayout>