<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user_avatar_iv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/lightGray"
            android:contentDescription="@string/account_box_text"
            android:scaleType="centerCrop"
            android:src="@mipmap/avatar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_account_circle"
                android:drawablePadding="16dp"
                android:padding="8dp"
                android:text="@string/your_name_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_tv"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="16dp"
                android:padding="8dp"
                android:text="@string/phone_number_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


            <TextView
                android:id="@+id/location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_tv"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_add_location"
                android:drawablePadding="16dp"
                android:padding="8dp"
                android:text="@string/your_location_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


            <TextView
                android:id="@+id/bio_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location_tv"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_info"
                android:drawablePadding="16dp"
                android:padding="8dp"
                android:text="@string/bio_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


        </RelativeLayout>

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/edit_profile_btn_text"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>