<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.rides.OfferDateFragment">

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="4dp"
        android:text="@string/travel_date_quiz"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/ride_date_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="256dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/ride_time_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/next_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/primary_btn_bg"
        android:text="@string/next_text"
        android:textAllCaps="false" />

</LinearLayout>