<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/date_time_tv"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/ride_location_quiz"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/pickup_location_hint"
        app:startIconDrawable="@drawable/ic_location_on">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pickup_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/drop_off_location_hint"
        app:startIconDrawable="@drawable/ic_location_on">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/drop_off_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/primary_btn_bg"
        android:text="@string/next_text"
        android:textAllCaps="false" />


</LinearLayout>